# ibmotron

./: .env.example  .gitignore  CODEX.md  Makefile  README.md  SPEC.md  pyproject.toml  sources.lock.json
docker/: simh-cpu.Dockerfile  train-gpu.Dockerfile
docs/: dataset_schema.md  eval_protocol.md  lexical_notes.md  runpod.md  source_manifest.md
ibm650_it/: __init__.py  cli.py  dashboard.py
ibm650_it/cloud/: __init__.py  runpod.py
ibm650_it/dataset/: __init__.py  build_records.py  corpus.py  dedupe.py  io.py  provenance.py  sampling.py  schema.py  split.py  stages.py  subset.py
ibm650_it/eval/: __init__.py  archive.py  assemble_check.py  b1_failure_review.py  band_failure_review.py  exact_match.py  failure_taxonomy.py  finalize.py  functional.py  locking.py  reevaluate.py  report.py  research_report.py
ibm650_it/generate/: __init__.py  bands.py  sample_data.py  sample_program.py  shrink.py  templates.py
ibm650_it/pit/: __init__.py  diff.py  normalize_pit.py  parsers.py
ibm650_it/simh/: __init__.py  deckio.py  runner.py  workdir.py
ibm650_it/source/: __init__.py  ast.py  bounds.py  normalize_it.py  render_it_card80.py  render_it_text.py
ibm650_it/training/: __init__.py  hf_qlora.py  infer.py  prepare_sft.py  prompt_templates.py  smoke_model.py  thinking_ablation.py  train_unsloth.py
scripts/: build_simh.sh  fetch_sources.py  runpod_post_run4_thinking_ablation.py  runpod_progressive_qwen.py  runpod_sweep.py  runpod_train_eval.py  smoke_examples.sh
tests/integration/: test_pipeline.py
tests/unit/: test_b1_failure_review.py  test_bounds.py  (+20 more)
(+5 files in other folders)
