[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm650-it"
version = "0.1.0"
description = "Reproducible IBM 650 Internal Translator to PIT research pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
ibm650-it = "ibm650_it.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ibm650_it*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
